// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverflowMenu Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OverflowMenu
    activeColor="#5f9dc7"
    color="#313233"
    openByDefault={false}
    position="right"
  >
     
    <DropdownItem
      onClick={[Function]}
    >
       Edit 
    </DropdownItem>
     
    <DropdownItem
      onClick={[Function]}
    >
       Delete 
    </DropdownItem>
  </OverflowMenu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <OverflowMenu__Menu>
         
        <DropdownItem
          onClick={[Function]}
        >
           Edit 
        </DropdownItem>
         
        <DropdownItem
          onClick={[Function]}
        >
           Delete 
        </DropdownItem>
      </OverflowMenu__Menu>,
      "closeOnOutsideClick": true,
      "menuOffset": "5px",
      "onClose": [Function],
      "onOpen": [Function],
      "openByDefault": false,
      "position": "right",
      "preventOutOfBounds": false,
      "trigger": <OverflowMenu__Trigger
        active={false}
        activeColor="#5f9dc7"
      >
        <Icon
          color="#313233"
          height="21"
          name="vertical-menu"
          width="5"
        />
      </OverflowMenu__Trigger>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          " ",
          <DropdownItem
            onClick={[Function]}
          >
             Edit 
          </DropdownItem>,
          " ",
          <DropdownItem
            onClick={[Function]}
          >
             Delete 
          </DropdownItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": " Edit ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " Edit ",
          "type": [Function],
        },
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": " Delete ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " Delete ",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <OverflowMenu__Menu>
           
          <DropdownItem
            onClick={[Function]}
          >
             Edit 
          </DropdownItem>
           
          <DropdownItem
            onClick={[Function]}
          >
             Delete 
          </DropdownItem>
        </OverflowMenu__Menu>,
        "closeOnOutsideClick": true,
        "menuOffset": "5px",
        "onClose": [Function],
        "onOpen": [Function],
        "openByDefault": false,
        "position": "right",
        "preventOutOfBounds": false,
        "trigger": <OverflowMenu__Trigger
          active={false}
          activeColor="#5f9dc7"
        >
          <Icon
            color="#313233"
            height="21"
            name="vertical-menu"
            width="5"
          />
        </OverflowMenu__Trigger>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            " ",
            <DropdownItem
              onClick={[Function]}
            >
               Edit 
            </DropdownItem>,
            " ",
            <DropdownItem
              onClick={[Function]}
            >
               Delete 
            </DropdownItem>,
          ],
        },
        "ref": null,
        "rendered": Array [
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": " Edit ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " Edit ",
            "type": [Function],
          },
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": " Delete ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " Delete ",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OverflowMenu
    activeColor="#5f9dc7"
    color="#313233"
    openByDefault={false}
    position="left"
  >
     
    <DropdownItem
      onClick={[Function]}
    >
       Edit 
    </DropdownItem>
     
    <DropdownItem
      onClick={[Function]}
    >
       Delete 
    </DropdownItem>
  </OverflowMenu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <OverflowMenu__Menu>
         
        <DropdownItem
          onClick={[Function]}
        >
           Edit 
        </DropdownItem>
         
        <DropdownItem
          onClick={[Function]}
        >
           Delete 
        </DropdownItem>
      </OverflowMenu__Menu>,
      "closeOnOutsideClick": true,
      "menuOffset": "5px",
      "onClose": [Function],
      "onOpen": [Function],
      "openByDefault": false,
      "position": "left",
      "preventOutOfBounds": false,
      "trigger": <OverflowMenu__Trigger
        active={false}
        activeColor="#5f9dc7"
      >
        <Icon
          color="#313233"
          height="21"
          name="vertical-menu"
          width="5"
        />
      </OverflowMenu__Trigger>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          " ",
          <DropdownItem
            onClick={[Function]}
          >
             Edit 
          </DropdownItem>,
          " ",
          <DropdownItem
            onClick={[Function]}
          >
             Delete 
          </DropdownItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": " Edit ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " Edit ",
          "type": [Function],
        },
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": " Delete ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " Delete ",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <OverflowMenu__Menu>
           
          <DropdownItem
            onClick={[Function]}
          >
             Edit 
          </DropdownItem>
           
          <DropdownItem
            onClick={[Function]}
          >
             Delete 
          </DropdownItem>
        </OverflowMenu__Menu>,
        "closeOnOutsideClick": true,
        "menuOffset": "5px",
        "onClose": [Function],
        "onOpen": [Function],
        "openByDefault": false,
        "position": "left",
        "preventOutOfBounds": false,
        "trigger": <OverflowMenu__Trigger
          active={false}
          activeColor="#5f9dc7"
        >
          <Icon
            color="#313233"
            height="21"
            name="vertical-menu"
            width="5"
          />
        </OverflowMenu__Trigger>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            " ",
            <DropdownItem
              onClick={[Function]}
            >
               Edit 
            </DropdownItem>,
            " ",
            <DropdownItem
              onClick={[Function]}
            >
               Delete 
            </DropdownItem>,
          ],
        },
        "ref": null,
        "rendered": Array [
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": " Edit ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " Edit ",
            "type": [Function],
          },
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": " Delete ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " Delete ",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OverflowMenu
    activeColor="orange"
    color="red"
    openByDefault={false}
    position="right"
  >
     
    <DropdownItem
      onClick={[Function]}
    >
       Action 1 
    </DropdownItem>
     
    <DropdownItem
      onClick={[Function]}
    >
       Action 2 
    </DropdownItem>
  </OverflowMenu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <OverflowMenu__Menu>
         
        <DropdownItem
          onClick={[Function]}
        >
           Action 1 
        </DropdownItem>
         
        <DropdownItem
          onClick={[Function]}
        >
           Action 2 
        </DropdownItem>
      </OverflowMenu__Menu>,
      "closeOnOutsideClick": true,
      "menuOffset": "5px",
      "onClose": [Function],
      "onOpen": [Function],
      "openByDefault": false,
      "position": "right",
      "preventOutOfBounds": false,
      "trigger": <OverflowMenu__Trigger
        active={false}
        activeColor="orange"
      >
        <Icon
          color="red"
          height="21"
          name="vertical-menu"
          width="5"
        />
      </OverflowMenu__Trigger>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          " ",
          <DropdownItem
            onClick={[Function]}
          >
             Action 1 
          </DropdownItem>,
          " ",
          <DropdownItem
            onClick={[Function]}
          >
             Action 2 
          </DropdownItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": " Action 1 ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " Action 1 ",
          "type": [Function],
        },
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": " Action 2 ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " Action 2 ",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <OverflowMenu__Menu>
           
          <DropdownItem
            onClick={[Function]}
          >
             Action 1 
          </DropdownItem>
           
          <DropdownItem
            onClick={[Function]}
          >
             Action 2 
          </DropdownItem>
        </OverflowMenu__Menu>,
        "closeOnOutsideClick": true,
        "menuOffset": "5px",
        "onClose": [Function],
        "onOpen": [Function],
        "openByDefault": false,
        "position": "right",
        "preventOutOfBounds": false,
        "trigger": <OverflowMenu__Trigger
          active={false}
          activeColor="orange"
        >
          <Icon
            color="red"
            height="21"
            name="vertical-menu"
            width="5"
          />
        </OverflowMenu__Trigger>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            " ",
            <DropdownItem
              onClick={[Function]}
            >
               Action 1 
            </DropdownItem>,
            " ",
            <DropdownItem
              onClick={[Function]}
            >
               Action 2 
            </DropdownItem>,
          ],
        },
        "ref": null,
        "rendered": Array [
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": " Action 1 ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " Action 1 ",
            "type": [Function],
          },
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": " Action 2 ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " Action 2 ",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OverflowMenu
    activeColor="#5f9dc7"
    color="#313233"
    openByDefault={true}
    position="right"
  >
     
    <DropdownTitle>
      Use the trigger to close me
    </DropdownTitle>
     
    <DropdownItem
      onClick={[Function]}
    >
       Action 1 
    </DropdownItem>
     
    <DropdownItem
      onClick={[Function]}
    >
       Action 2 
    </DropdownItem>
  </OverflowMenu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <OverflowMenu__Menu>
         
        <DropdownTitle>
          Use the trigger to close me
        </DropdownTitle>
         
        <DropdownItem
          onClick={[Function]}
        >
           Action 1 
        </DropdownItem>
         
        <DropdownItem
          onClick={[Function]}
        >
           Action 2 
        </DropdownItem>
      </OverflowMenu__Menu>,
      "closeOnOutsideClick": true,
      "menuOffset": "5px",
      "onClose": [Function],
      "onOpen": [Function],
      "openByDefault": true,
      "position": "right",
      "preventOutOfBounds": false,
      "trigger": <OverflowMenu__Trigger
        active={true}
        activeColor="#5f9dc7"
      >
        <Icon
          color="#5f9dc7"
          height="21"
          name="vertical-menu"
          width="5"
        />
      </OverflowMenu__Trigger>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          " ",
          <DropdownTitle>
            Use the trigger to close me
          </DropdownTitle>,
          " ",
          <DropdownItem
            onClick={[Function]}
          >
             Action 1 
          </DropdownItem>,
          " ",
          <DropdownItem
            onClick={[Function]}
          >
             Action 2 
          </DropdownItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Use the trigger to close me",
          },
          "ref": null,
          "rendered": "Use the trigger to close me",
          "type": [Function],
        },
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": " Action 1 ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " Action 1 ",
          "type": [Function],
        },
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": " Action 2 ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " Action 2 ",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <OverflowMenu__Menu>
           
          <DropdownTitle>
            Use the trigger to close me
          </DropdownTitle>
           
          <DropdownItem
            onClick={[Function]}
          >
             Action 1 
          </DropdownItem>
           
          <DropdownItem
            onClick={[Function]}
          >
             Action 2 
          </DropdownItem>
        </OverflowMenu__Menu>,
        "closeOnOutsideClick": true,
        "menuOffset": "5px",
        "onClose": [Function],
        "onOpen": [Function],
        "openByDefault": true,
        "position": "right",
        "preventOutOfBounds": false,
        "trigger": <OverflowMenu__Trigger
          active={true}
          activeColor="#5f9dc7"
        >
          <Icon
            color="#5f9dc7"
            height="21"
            name="vertical-menu"
            width="5"
          />
        </OverflowMenu__Trigger>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            " ",
            <DropdownTitle>
              Use the trigger to close me
            </DropdownTitle>,
            " ",
            <DropdownItem
              onClick={[Function]}
            >
               Action 1 
            </DropdownItem>,
            " ",
            <DropdownItem
              onClick={[Function]}
            >
               Action 2 
            </DropdownItem>,
          ],
        },
        "ref": null,
        "rendered": Array [
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Use the trigger to close me",
            },
            "ref": null,
            "rendered": "Use the trigger to close me",
            "type": [Function],
          },
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": " Action 1 ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " Action 1 ",
            "type": [Function],
          },
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": " Action 2 ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " Action 2 ",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
